<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_logout"
        android:icon="@drawable/ic_round_logout_24"
        android:title="@string/toolbar_logout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_sort"
        android:icon="@drawable/ic_round_sort_24"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/albums_sort_by_genre"
                android:title="@string/by_genre"
                app:showAsAction="never" />
            <item
                android:id="@+id/albums_sort_by_alphabet_az"
                android:title="@string/by_az"
                app:showAsAction="never" />
            <item
                android:id="@+id/albums_sort_by_alphabet_za"
                android:title="@string/by_za"
                app:showAsAction="never" />
            <item
                android:id="@+id/albums_sort_by_default"
                android:title="@string/refresh"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
