<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.update.UpdateAlbumFragment">

    <TextView
        android:id="@+id/update_album_update_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/update_album"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_album_title_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="6"
        android:hint="@string/album_title"
        android:inputType="textPersonName"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/update_album_update_album"
        app:layout_constraintTop_toBottomOf="@+id/update_album_update_album" />

    <Spinner
        android:id="@+id/update_album_genre_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textDirection="rtl"
        app:layout_constraintBottom_toTopOf="@+id/update_album_update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update_album_num_of_tracks_edittext"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_album_num_of_tracks_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="8"
        android:hint="@string/album_num_of_tracks"
        android:inputType="numberDecimal"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/update_album_title_edittext"
        app:layout_constraintTop_toBottomOf="@+id/update_album_title_edittext" />

    <EditText
        android:id="@+id/update_album_release_date_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="6"
        android:hint="@string/album_release_date"
        android:inputType="date"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/update_album_num_of_tracks_edittext"
        app:layout_constraintTop_toBottomOf="@+id/update_album_num_of_tracks_edittext" />

    <EditText
        android:id="@+id/update_album_artist_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="no"
        android:ems="6"
        android:hint="@string/album_artist_name"
        android:inputType="textPersonName"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/update_album_release_date_edittext"
        app:layout_constraintTop_toBottomOf="@+id/update_album_release_date_edittext" />

    <Button
        android:id="@+id/update_album_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@+id/update_album_artist_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/update_album_artist_name_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>
