<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.add.AddTrackDialogFragment">

    <TextView
        android:id="@+id/add_track_add_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_album"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_track_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="8"
        android:hint="@string/track_name"
        android:inputType="textPersonName"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/add_track_add_track"
        app:layout_constraintTop_toBottomOf="@+id/add_track_add_track" />

    <EditText
        android:id="@+id/add_track_num_of_track_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="8"
        android:hint="@string/track_num_of_track"
        android:inputType="numberDecimal"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/add_track_name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/add_track_name_edittext" />

    <EditText
        android:id="@+id/add_track_album_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="8"
        android:hint="@string/track_album_name"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/add_track_num_of_track_edittext"
        app:layout_constraintTop_toBottomOf="@+id/add_track_num_of_track_edittext" />

    <EditText
        android:id="@+id/add_track_artist_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:ems="8"
        android:hint="@string/track_artist_name"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@+id/add_track_album_name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/add_track_album_name_edittext" />

    <Spinner
        android:id="@+id/add_track_media_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="@+id/add_track_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_track_name_edittext"
        app:layout_constraintTop_toTopOf="@+id/add_track_name_edittext" />

    <Spinner
        android:id="@+id/add_track_bit_depth_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="@+id/add_track_num_of_track_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_track_name_edittext"
        app:layout_constraintTop_toTopOf="@+id/add_track_num_of_track_edittext" />

    <Spinner
        android:id="@+id/add_track_sample_rate_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="@+id/add_track_album_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_track_name_edittext"
        app:layout_constraintTop_toTopOf="@+id/add_track_album_name_edittext" />

    <Button
        android:id="@+id/add_track_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_track_artist_name_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>
